--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,11 @@
 body, html {
   width: 100%;
+  background-color: #364352;
 }
 
 body .test {
   width: 90%;
-  margin: 0 auto;
+  margin: 20px auto;
   height: 900px;
   background-color: lightgray;
   padding: 0px;
