--- a/public/styles.css
+++ b/public/styles.css
@@ -3,10 +3,86 @@ body, html {
   background-color: #364352;
 }
 
+/* Main Nav Bar */
+@media (min-width:1920px){
+  body .nav {
+    display: block;
+    width: 100%;
+    max-width: 64%;
+    background-color: red;
+    height: 100px;
+    margin: 0px auto 20px auto;
+    padding: 0px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+  }
+}
+
+@media (min-width:1278px){
+  body .nav {
+    display: block;
+    width: 100%;
+    background-color: red;
+    height: 100px;
+    margin: 0px auto 20px auto;
+    padding: 0px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+  }
+}
+
+/* Component Div */
 body .test {
-  width: 90%;
+  width: 64%;
   margin: 20px auto;
   height: 900px;
-  background-color: lightgray;
-  padding: 0px;
+  background-color: rgb(233, 233, 233);
+  padding: 30px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
+body h2 {
+  margin: 0px;
+}
+
+
+
+
+
+/* OVERVIEW ******************************************************************/
+
+
+
+
+
+
+
+
+
+/* RELATED ITEMS *************************************************************/
+
+
+
+
+
+
+
+
+
+/* QUESTIONS & ANSWERS *******************************************************/
+
+
+
+
+
+
+
+
+
+/* RATINGS & REVIEWS *********************************************************/
