--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 body, html {
   width: 100%;
-  background-color: #364352;
+  background-color: #ffffff;
   margin: 0;
 }
 
@@ -43,14 +43,28 @@ body div.nav .logo {
 }
 
 /* Component Div */
+body div.overviewComponent {
+  display: block;
+  position: relative;
+  width: 100%;
+  max-width: 1280px;
+  margin: 20px auto;
+  background-color: rgb(230, 230, 230);
+  padding: 30px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body div.component {
   display: block;
   position: relative;
   width: 100%;
   max-width: 1280px;
   margin: 20px auto;
-  background-color: rgb(236, 236, 236);
-  padding: 30px;
+  background-color: rgb(230, 230, 230);
+  padding: 30px 120px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -64,8 +78,8 @@ body div.component {
     width: 100%;
     max-width: 1280px;
     margin: 20px auto;
-    background-color: rgb(236, 236, 236);
-    padding: 30px;
+    background-color: rgb(230, 230, 230);
+    padding: 30px 130px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -123,12 +137,6 @@ body div.nav {
 /* OVERVIEW ******************************************************************/
 
 
-body div.component .SUBCOMPONENT {
-  background-color: gray;
-  width: 300px;
-  height: 100px;
-}
-
 
 
 
@@ -138,24 +146,49 @@ body div.component .SUBCOMPONENT {
 /* RELATED ITEMS *************************************************************/
 
 
-body div.component .SUBCOMPONENT {
-  background-color: gray;
-  width: 300px;
-  height: 100px;
-}
-
-
-
 
 
 
 /* QUESTIONS & ANSWERS *******************************************************/
 
 
-body div.component .SUBCOMPONENT {
-  background-color: gray;
-  width: 300px;
-  height: 100px;
+body div.component div.q_a_component {
+  background-color: rgb(241, 194, 255);
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body div.component div.q_a_component div.searchBar {
+  height: 80px;
+  background-color: rgb(228, 138, 255);
+  margin: 10px 0px;
+}
+
+body div.component div.q_a_component div.q_a_subcomponent {
+  height: 80px;
+  background-color: rgb(228, 138, 255);
+  margin: 10px 0px;
+}
+
+body div.component div.q_a_component div.q_a_subcomponent div.questions {
+  height: 80px;
+  background-color: rgb(208, 56, 255);
+  margin: 10px 0px;
+}
+
+body div.component div.q_a_component div.q_a_subcomponent div.answers {
+  height: 80px;
+  background-color: rgb(208, 56, 255);
+  margin: 10px 0px;
+}
+
+body div.component div.q_a_component div.q_a_buttons {
+  height: 80px;
+  background-color: rgb(228, 138, 255);
+  margin: 10px 0px;
 }
 
 
@@ -165,9 +198,3 @@ body div.component .SUBCOMPONENT {
 
 /* RATINGS & REVIEWS *********************************************************/
 
-
-body div.component .SUBCOMPONENT {
-  background-color: gray;
-  width: 300px;
-  height: 100px;
-}
