Pulling Main for Latest PR - working on Grid

--- a/client/components/ratings-review/ratings.css
+++ b/client/components/ratings-review/ratings.css
@@ -1,4 +1,4 @@
-.md-grid-push-pull [class*="mbsc-col"] {
+/* .md-grid-basic [class*="mbsc-col"] {
   padding-top: .5em;
   padding-bottom: .5em;
   background: #cfe0f3;
@@ -7,28 +7,6 @@
   color: #454b50;
 }
 
-.md-grid-push-pull .mbsc-row {
+.md-grid-basic .mbsc-row {
   margin: 1em 0;
-}
-
-/* <div className='test'>
-
-<div className='md-grid-push-pull'>
-  <div className='mbsc-row'>
-
-      <h1>THIS IS THE RATINGS COMPONENT</h1>
-      <div className='mbsc-col-8 mbsc-pull-lg-4'>
-        <h2>This will be the ReviewList Component</h2>
-        <div className='reviewTiles'>
-          <h3>These will be the individual review tiles</h3>
-        </div>
-      </div>
-
-      <div className='mbsc-col-4 mbsc-push-lg-8'>
-        <h2>This will be the Rating Component which needs to be left of the ratings component</h2>
-      </div>
-
-    </div>
-  </div>
-
-</div> */
+} */
