--- a/public/styles.css
+++ b/public/styles.css
@@ -182,13 +182,20 @@ body div.component div.reviewsRatingsContainer div.reviewList{
   background-color: rgba(128, 138, 131, 0.397);
   grid-column-start: 2;
   grid-column-end: 4;
+
+  height: 400px;
+  overflow: auto;
 }
 
 body div.component div.reviewsRatingsContainer div.reviewList div.reviewTileComponent{
   background-color: rgba(128, 138, 131, 0.562);
   grid-column-start: 2;
   grid-column-end: 4;
-  padding: 5px;
+  padding: 10px;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 body div.component div.reviewsRatingsContainer .ratingComponent{
