--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@ body, html {
   width: 100%;
   background-color: #ffffff;
   margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* Main Nav Bar */
@@ -54,7 +55,7 @@ body div.overviewComponent {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body div.component {
@@ -68,7 +69,7 @@ body div.component {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 @media (min-width:1280px){
@@ -83,23 +84,20 @@ body div.component {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
 }
 
 body div.component h1 {
   margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 body div.component h2 {
   margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 body div.component h3 {
   margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Slogan Section */
@@ -154,7 +152,8 @@ body div.nav {
 
 body div.component div.q_a_component {
   display: block;
-  background-color: rgb(241, 194, 255);
+  color: rgb(87, 87, 87);
+  background-color: white;
   width: 100%;
   height: 100%;
   -webkit-box-sizing: border-box;
@@ -172,24 +171,19 @@ body div.component div.related-products {
   box-sizing: border-box;
 }
 
-<<<<<<< HEAD
-/* Searchbar */
-=======
 body div.component div.related-products .carousel {
   width: 100%;
   height: 100%;
   background-color: antiquewhite;
 }
->>>>>>> main
 
 body div.component div.q_a_component div.searchBar_container {
-  background-color: rgb(228, 138, 255);
   margin: 10px 0px;
   padding: 0px;
 }
 
 body div.component div.q_a_component div.searchBar_container .searchbar {
-  height: 60px;
+  height: 65px;
   width: 100%;
   border: none;
   border: 1px solid black;
@@ -201,7 +195,7 @@ body div.component div.q_a_component div.searchBar_container .searchbar {
 }
 
 ::placeholder {
-  color: rgb(78, 78, 78);
+  color: rgb(87, 87, 87);
   font-size: 1rem;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
@@ -210,7 +204,6 @@ body div.component div.q_a_component div.searchBar_container .searchbar {
 /* Q&A CONTAINER */
 
 body div.component div.q_a_component div.q_a_container {
-  background-color: rgb(228, 138, 255);
   margin: 10px 0px;
 }
 
@@ -220,39 +213,40 @@ body div.component div.q_a_component div.q_a_container span#q_a_text {
 }
 
 body div.component div.q_a_component div.q_a_container div.questions {
-  background-color: rgb(121, 57, 141);
   margin: 10px 0px;
 }
 
 body div.component div.q_a_component div.q_a_container div.answers {
-  background-color: rgb(121, 57, 141);
   margin: 10px 0px;
+}
+
+body div.component div.q_a_component div.q_a_container div.answers .q_a_footer {
+  font-size: .8rem;
 }
 
 /* Q&A BUTTONS */
 
 body div.component div.q_a_component div.q_a_buttons {
   display: block;
-  background-color: rgb(228, 138, 255);
   margin: 10px 0px;
+
 }
 
 body div.component div.q_a_component div.q_a_buttons button.more_answered_questions {
   display: inline-block;
-  height: 60px;
-  background-color: rgb(80, 64, 85);
+  height: 65px;
   margin: 10px 0px;
   font-weight: bold;
   font-size: 1rem;
   border: none;
   border: 1px solid black;
   padding: 0px 20px;
+  color: rgb(87, 87, 87);
 }
 
 body div.component div.q_a_component div.q_a_buttons button.add_a_question {
   display: inline-block;
-  height: 60px;
-  background-color: rgb(80, 64, 85);
+  height: 65px;
   margin: 10px 0px;
   font-weight: bold;
   font-size: 1rem;
@@ -260,6 +254,7 @@ body div.component div.q_a_component div.q_a_buttons button.add_a_question {
   border: 1px solid black;
   margin-left: 20px;
   padding: 0px 20px;
+  color: rgb(87, 87, 87);
 }
 
 
