--- a/public/styles.css
+++ b/public/styles.css
@@ -143,8 +143,40 @@ body div.nav {
 
 /* RELATED ITEMS Change name of SUBCOMPONENT*******************************************************/
 
+body div.component div.related-products .carousel {
+  width: 100%;
+  height: 100%;
+  background-color: antiquewhite;
+}
 
+.carouselInner {
+  width: 100%;
+  height: 600px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  background-color: rgba(199, 85, 85, 0.5);
+}
 
+.carouselInner .left {
+  flex: 5%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.5);
+}
+
+.carouselInner .center {
+  flex: 90%;
+  height: 100%;
+}
+
+.carouselInner .right {
+  flex: 5%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.5);
+}
 
 
 /* QUESTIONS & ANSWERS *******************************************************/
@@ -169,12 +201,6 @@ body div.component div.related-products {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-body div.component div.related-products .carousel {
-  width: 100%;
-  height: 100%;
-  background-color: antiquewhite;
 }
 
 body div.component div.q_a_component div.searchBar_container {
