--- a/public/styles.css
+++ b/public/styles.css
@@ -161,10 +161,16 @@ body div.component div.related-products .carousel {
   background-color: rgba(199, 85, 85, 0.5);
 }
 
+.carouselInner button {
+  cursor: pointer;
+}
+
 .carouselInner .left {
   flex: 5%;
   height: 100%;
   background-color: rgb(0, 0, 0, 0.5);
+  display: grid;
+  place-items: center;
 }
 
 .carouselInner .center {
@@ -176,6 +182,8 @@ body div.component div.related-products .carousel {
   flex: 5%;
   height: 100%;
   background-color: rgb(0, 0, 0, 0.5);
+  display: grid;
+  place-items: center;
 }
 
 
