--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@ body, html {
   background-color: #ffffff;
   margin: 0;
   font-family: 'Poppins', sans-serif;
+  color: rgb(87, 87, 87);
 }
 
 /* Main Nav Bar */
@@ -50,8 +51,8 @@ body div.overviewComponent {
   width: 100%;
   max-width: 1280px;
   margin: 20px auto;
-  background-color: rgb(230, 230, 230);
-  padding: 30px;
+  background-color: white;
+  padding: 30px 0px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -64,7 +65,7 @@ body div.component {
   width: 100%;
   max-width: 1280px;
   margin: 20px auto;
-  background-color: rgb(230, 230, 230);
+  background-color: white;
   padding: 30px 120px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -79,7 +80,7 @@ body div.component {
     width: 100%;
     max-width: 1280px;
     margin: 20px auto;
-    background-color: rgb(230, 230, 230);
+    background-color: white;
     padding: 30px 130px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -88,16 +89,24 @@ body div.component {
   }
 }
 
-body div.component h1 {
+h1 {
   margin: 0px;
+  color: rgb(87, 87, 87);
 }
 
-body div.component h2 {
+h2 {
   margin: 0px;
+  color: rgb(87, 87, 87);
 }
 
-body div.component h3 {
+h3 {
   margin: 0px;
+  color: rgb(87, 87, 87);
+}
+
+p {
+  font-size: .9rem;
+  color: rgb(87, 87, 87);
 }
 
 /* COMPONENT SPECIFIC */
@@ -108,18 +117,49 @@ body div.component div.q_a_component .component_title {
 
 /* Slogan Section */
 
-body div.slogan {
-  display: block;
+body div.slogan_container {
+  display: grid;
+  grid-template-columns: 70% 30%;
   position: relative;
   width: 100%;
   max-width: 1280px;
-  background-color: #677686;
-  height: 80px;
   margin: 0px auto 20px auto;
-  padding: 0px;
+  padding: 0px 130px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+div.slogan_container .slogan_title {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+div.slogan_container .slogan_body {
+  grid-column: 1;
+  grid-row: 1;
+  margin: 40px 20px 20px 0px;
+}
+
+div.slogan_container .slogan_list {
+  grid-column: 2;
+  grid-row: 1;
+  border-left: 1px solid rgb(87, 87, 87);
+  top: 70%;
+  bottom: 15%;
+  margin-left: 20px;
+  align-self: start;
+}
+
+.slogan_list ul {
+  list-style-type: none;
+  padding-left: 30px;
+}
+
+.slogan_list ul li:before {
+  content: '✔';
+  font-size: 1.2rem;
+  margin-right: 10px;
 }
 
 @media (min-width:1280px){
@@ -156,7 +196,7 @@ body div.nav {
 /* QUESTIONS & ANSWERS *******************************************************/
 
 
-body div.component div.q_a_component {
+div.component div.q_a_component {
   display: block;
   color: rgb(87, 87, 87);
   background-color: white;
@@ -167,37 +207,21 @@ body div.component div.q_a_component {
   box-sizing: border-box;
 }
 
-body div.component div.related-products {
-  display: block;
-  background-color: rgb(241, 194, 255);
-  width: 100%;
-  height: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body div.component div.related-products .carousel {
-  width: 100%;
-  height: 100%;
-  background-color: antiquewhite;
-}
-
 
 /* SEARCHBAR */
-body div.component div.q_a_component div.searchBar_container {
+div.q_a_component div.searchBar_container {
   margin: 10px 0px;
   padding: 0px;
 }
 
-body div.component div.q_a_component div.searchBar_container .searchbar {
+div.searchBar_container .searchbar {
   height: 65px;
   width: 100%;
   color:rgb(87, 87, 87);
   border: none;
   border: 1px solid black;
   margin: 10px 0px;
-  padding: 0px 20px;
+  padding: 0px 15px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -219,42 +243,42 @@ input:focus:-ms-input-placeholder { color:transparent; } /* oldIE ;) */
 
 
 /* Q&A CONTAINER */
-body div.component div.q_a_component div.q_a_container {
+div.q_a_container {
   margin: 10px 0px;
 }
 
-body div.component div.q_a_component div.q_a_container span#q_a_text {
+div.q_a_container span#q_a_text {
   font-weight: bold;
   font-size: 1.1rem;
 }
 
-body div.component div.q_a_component div.q_a_container div.questions {
+div.q_a_container div.questions {
   margin: 10px 0px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
 }
 
-body div.component div.q_a_component div.q_a_container div.questions #q_a_helpful_add {
+div.questions #q_a_helpful_add {
   font-size: .7rem;
   margin-left: 25px;
 }
 
-body div.component div.q_a_component div.q_a_container div.answers {
+div.q_a_container div.answers {
   margin: 10px 0px;
 }
 
-body div.component div.q_a_component div.q_a_container div.answers #q_a_answer_text {
+div.answers #q_a_answer_text {
   font-size: .9rem;
 }
 
 
 /* Q&A IMAGES */
-body div.component div.q_a_component div.q_a_container div.answers .q_a_thumbnail_img {
+div.answers .q_a_thumbnail_img {
   width: 100%;
 }
 
-body div.component div.q_a_component div.q_a_container div.answers img {
+div.answers img {
   height: 70px;
   margin: 10px 0px 10px 25px;
   overflow: hidden;
@@ -262,7 +286,7 @@ body div.component div.q_a_component div.q_a_container div.answers img {
 
 
 /* Q&A SECTION FOOTER */
-body div.component div.q_a_component div.q_a_container div.answers .q_a_footer {
+div.answers .q_a_footer {
   font-size: .7rem;
   margin: 10px 25px;
   color:rgb(87, 87, 87);
@@ -270,13 +294,13 @@ body div.component div.q_a_component div.q_a_container div.answers .q_a_footer {
 
 
 /* Q&A BUTTONS */
-body div.component div.q_a_component div.q_a_buttons {
+div.q_a_component div.q_a_buttons {
   display: block;
   margin: 10px 0px;
 
 }
 
-body div.component div.q_a_component div.q_a_buttons button.buttons {
+div.q_a_buttons button.buttons {
   display: inline-block;
   height: 65px;
   margin: 10px 0px;
