Product photo working

--- a/public/styles.css
+++ b/public/styles.css
@@ -191,6 +191,8 @@ div.productOverView {
   display: flex;
   flex-flow: column;
   position: relative;
+  margin-left: -30px;
+  width: 100%
 }
 
 .Main-ImageOV {
