--- a/public/styles.css
+++ b/public/styles.css
@@ -220,9 +220,44 @@ div.productOverView {
 
 }
 
+.category {
+  display: flex;
+  flex-flow: column;
+  position: absolute;
+  margin-left: 630px;
+  margin-top: 80px;
+  margin-bottom: 1;
+  font-size: 18px;
+  line-height: 18px;
+}
 
+.category-item {
+  font-size: 50px;
+}
 
+.product-priceOV {
+  display: flex;
+  flex-flow: column;
+  position: absolute;
+  margin-left: 630px;
+  margin-top: 235px;
+  font-size: 18px;
+}
+.stylescontainerOV{
+  display: flex;
+  flex-flow: row;
+  position: absolute;
+  margin-left: 625px;
+  margin-top: 330px;
 
+}
+
+.styleOV {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: 3px;
+}
 
 /* RELATED ITEMS Change name of SUBCOMPONENT*******************************************************/
 
