Completed More Reviews functionality

--- a/client/components/ratings-review/ReviewTile.css
+++ b/client/components/ratings-review/ReviewTile.css
@@ -1,20 +1,24 @@
 .reviewRating {
-  color: antiquewhite;
+  font-size: .7rem;
+  color: rgb(0, 0, 0);
   grid-column-start: 1;
   grid-row-start: 1;
   max-height: min-content;
 }
 
 .reviewerNameDate {
-  color: antiquewhite;
+  font-size: .7rem;
+  color: rgb(0, 0, 0);
   grid-column-start: 4;
   grid-row-start: 1;
   white-space: nowrap;
   max-height: min-content;
+  color:rgb(87, 87, 87);
+  justify-self: end;
 }
 
 .reviewSummary {
-  font-size: 26px;
+  font-size: 1.17em;
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row-start: 2;
@@ -22,7 +26,7 @@
 }
 
 .reviewBody {
-  font-size: 18px;
+  font-size: .9rem;
   grid-column-start: 1;
   grid-column-end: 5;
   grid-row-start: 3;
@@ -32,6 +36,7 @@
 }
 
 .responseDiv {
+  font-size: .9rem;
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row-start: 4;
@@ -42,7 +47,8 @@
   color: antiquewhite;
   grid-column-start: 1;
   grid-row-start: 5;
-  grid-gap: 3px;
+  grid-gap: 8px;
+  padding: 15px;
   display: flex;
   flex-direction: row;
   max-height: fit-content;
@@ -53,4 +59,8 @@
   grid-row-start: 4;
   justify-self: end;
   max-height: fit-content;
+  font-size: .7rem;
+  color:rgb(87, 87, 87);
+  justify-self: end;
 }
+
