--- a/client/components/ratings-review/ReviewTile.css
+++ b/client/components/ratings-review/ReviewTile.css
@@ -2,8 +2,13 @@
   font-size: .7rem;
   color: rgb(0, 0, 0);
   grid-column-start: 1;
+  grid-column-end: 3;
   grid-row-start: 1;
   max-height: min-content;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+
 }
 
 .reviewerNameDate {
@@ -15,6 +20,7 @@
   max-height: min-content;
   color:rgb(87, 87, 87);
   justify-self: end;
+  padding: 5px;
 }
 
 .reviewSummary {
@@ -23,6 +29,7 @@
   grid-column-end: 4;
   grid-row-start: 2;
   max-height: fit-content;
+  padding: 5px;
 }
 
 .reviewBody {
@@ -30,6 +37,7 @@
   grid-column-start: 1;
   grid-column-end: 5;
   grid-row-start: 3;
+  padding: 5px;
 
   max-height: 100px;
   overflow: auto;
@@ -41,6 +49,16 @@
   grid-column-end: 4;
   grid-row-start: 4;
   max-height: min-content;
+  padding: 5px;
+}
+
+.recommendCheck {
+  font-size: .9rem;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 4;
+  max-height: min-content;
+  padding: 5px;
 }
 
 .reviewPhotos {
@@ -48,19 +66,20 @@
   grid-column-start: 1;
   grid-row-start: 5;
   grid-gap: 8px;
-  padding: 15px;
   display: flex;
   flex-direction: row;
   max-height: fit-content;
+  justify-content: flex-start;
 }
 
 .reviewHelpfulness {
   grid-column-start: 4;
-  grid-row-start: 4;
+  grid-row-start: 5;
   justify-self: end;
   max-height: fit-content;
   font-size: .7rem;
   color:rgb(87, 87, 87);
-  justify-self: end;
+  align-self: end;
+  padding: 5px;
 }
 
