--- a/client/components/ratings-review/Ratings.css
+++ b/client/components/ratings-review/Ratings.css
@@ -33,6 +33,7 @@
   height: 100vh;
   top: 0;
   left: 0;
+  z-index: 10;
 }
 
 .box {
@@ -47,6 +48,7 @@
   padding: 20px;
   border: 1px solid #999;
   overflow: auto;
+  z-index: 10;
 }
 
 .close-icon {
