--- a/public/styles.css
+++ b/public/styles.css
@@ -197,14 +197,20 @@ div.productOverView {
 
 .Main-ImageOV {
   max-width: 700px;
-  height: 900px;
+  max-height: 770px;
+  min-height: 770px;
+  object-fit: cover;
   width: auto;
   height: auto;
   border-style: groove;
   margin-left: -100px;
 }
 .ThumbnailOV {
-  width: 20%;
+  max-width: 50px;
+  max-height: 50px;
+  min-height: 50px;
+  object-fit: cover;
+  width: 100%;
   margin: 1%;
   border-style: double;
 
@@ -253,10 +259,22 @@ div.productOverView {
 }
 
 .styleOV {
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
   border-radius: 50%;
   margin: 3px;
+}
+
+.styleName {
+  display: flex;
+  flex-flow: column;
+  position: absolute;
+  margin-left: 630px;
+  margin-top: 295px;
+  margin-bottom: 1;
+  font-size: 18px;
+  line-height: 18px;
 }
 
 /* RELATED ITEMS Change name of SUBCOMPONENT*******************************************************/
