--- a/public/styles.css
+++ b/public/styles.css
@@ -228,14 +228,19 @@ div.productOverView {
   flex-flow: column;
   position: absolute;
   margin-left: 630px;
-  margin-top: 80px;
+  margin-top: 30px;
   margin-bottom: 1;
   font-size: 18px;
   line-height: 18px;
 }
 
 .category-item {
-  font-size: 50px;
+  font-size: 25px;
+  margin-bottom: 0px;
+}
+
+.itemNameOV {
+  font-size: 23px;
 }
 
 .product-priceOV {
