completed search bar functionality

--- a/public/styles.css
+++ b/public/styles.css
@@ -394,6 +394,10 @@ input:focus:-moz-placeholder { color:transparent; } /* Firefox 18- */
 input:focus::-moz-placeholder { color:transparent; } /* Firefox 19+ */
 input:focus:-ms-input-placeholder { color:transparent; } /* oldIE ;) */
 
+div.searchBar_container .noMatch {
+  margin: 20px 0px;
+}
+
 
 /* Q&A CONTAINER */
 div.q_a_container {
