--- a/client/components/ratings-review/Ratings.css
+++ b/client/components/ratings-review/Ratings.css
@@ -26,6 +26,23 @@
   grid-row-start: 2;
 }
 
+.sortDropdown {
+  height: 35px;
+  width: 130px;
+  font-size: 1rem;
+  border: none;
+  border: 1px solid rgba(0, 0, 0, 0.514);
+  color: rgb(87, 87, 87);
+  cursor: pointer;
+  padding: 3px;
+  margin: 3px;
+}
+
+.sort {
+  justify-content: right;
+  padding: 5px;
+}
+
 .popup-box {
   position: fixed;
   background: #00000050;
