Worked out the functionality for the rating breakdown percentage and fill for the star bars

--- a/client/components/ratings-review/Ratings.css
+++ b/client/components/ratings-review/Ratings.css
@@ -39,8 +39,11 @@
 }
 
 .sort {
-  justify-content: right;
+  text-align: right;
+
   padding: 5px;
+  width: 100%;
+  height: 35px;
 }
 
 .popup-box {
