--- a/public/styles.css
+++ b/public/styles.css
@@ -458,9 +458,26 @@ div.answers .q_a_thumbnail_img {
 }
 
 div.answers img {
-  height: 70px;
   margin: 10px 0px 10px 30px;
   overflow: hidden;
+  cursor: pointer;
+}
+
+.imgPop {
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
 }
 
 
