--- a/public/styles.css
+++ b/public/styles.css
@@ -58,19 +58,6 @@ body div.nav .logo {
 }
 
 /* Component Div */
-body div.overviewComponent {
-  display: block;
-  position: relative;
-  width: 100%;
-  max-width: 1280px;
-  margin: 20px auto;
-  background-color: white;
-  padding: 30px 0px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
 
 body div.component {
   display: block;
@@ -84,6 +71,7 @@ body div.component {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  z-index: 0;
 }
 
 @media (min-width:1280px){
@@ -99,6 +87,7 @@ body div.component {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    z-index: 0;
   }
 }
 
@@ -194,6 +183,7 @@ body div.overviewComponent {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  z-index: 0;
 }
 
 @media (min-width:1280px){
@@ -209,6 +199,7 @@ body div.overviewComponent {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    z-index: 0;
   }
 }
 
@@ -499,140 +490,7 @@ div.answers img {
 }
 
 /* Popup style */
-.q_a_popup_box {
-  position: fixed;
-  background: #0000006c;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  vertical-align: middle;
-}
 
-.q_a_box {
-  position: relative;
-  color: rgb(87, 87, 87);
-  max-width: 800px;
-  min-width: 360px;
-  width: auto;
-  margin: auto;
-  height: auto;
-  max-height: 90vh;
-  background: #f4f7f8;
-  border-radius: 15px;
-  padding: 20px;
-  border: 5px solid rgba(114, 170, 114, 0.726);
-  overflow: auto;
-  z-index: 20;
-}
-
-.form_data {
-  width: 80%;
-  height: auto;
-  margin: auto;
-}
-
-/* .q_a_box {
-  position: relative;
-  color: white;
-  width: 70%;
-  margin: 0 auto;
-  height: auto;
-  max-height: 70vh;
-  margin-top: calc(100vh - 85vh - 20px);
-  background: rgb(73, 122, 73);
-  border-radius: 15px;
-  padding: 20px;
-  border: 5px solid rgb(255, 255, 255);
-  overflow: auto;
-  z-index: 20;
-} */
-
-.q_a_close-icon {
-  content: '✖';
-  cursor: pointer;
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  width: 25px;
-  height: 25px;
-  line-height: 20px;
-  text-align: center;
-  font-size: 2rem;
-  color: rgb(160, 160, 160);
-}
-
-.pop_up_title {
-  width: 100%;
-  color: rgb(87, 87, 87);
-  font-size: 2.5rem;
-  text-align: center;
-}
-
-.pop_up_subtitle {
-  width: 100%;
-  color: rgb(87, 87, 87);
-  text-align: center;
-  font-weight: bold;
-}
-
-hr.form_hr {
-  width: 80%;
-  border-top: 1px solid #d1d1d1;
-}
-
-.pop_up_input_form {
-  background-color: #ececec;
-  height: 40px;
-  width: 100%;
-  border: none;
-  border-top: 1px solid #d6d6d6;
-  border-radius: 4px;
-  padding: 0 10px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.form_item {
-  margin-bottom: 15px;
-  font-size: .8rem;
-
-}
-
-.form_characteristics_container {
-  display: grid;
-  grid-template-columns: 25%;
-}
-
-.form_characteristics_radio {
-  grid-column-start: 2;
-}
-
-.form_button {
-  margin: 10px 0px;
-  width: 100%;
-  text-align: center;
-}
-
-.pop_up_input_form::placeholder {
-  font-family: 'Poppins', sans-serif;
-  font-size: .9rem;
-  font-weight:300;
-  color:rgb(160, 160, 160);
-}
-
-.modal_button {
-  height: 40px;
-  width: 200px;
-  border: none;
-  color: white;
-  background-color: rgb(241, 145, 81);
-  border-radius: 4px;
-  font-family: 'Poppins', sans-serif;
-  font-size: .9rem;
-  margin: 0 auto;
-}
 
 
 /* Q&A SECTION FOOTER */
@@ -709,3 +567,210 @@ body div.component div.reviewsRatingsContainer .ratingComponent{
   padding: 20px;
 }
 
+
+
+
+/* POP UP MODAL____________________________________________________*/
+
+.q_a_popup_box {
+  position: fixed;
+  background: #0000006c;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  vertical-align: middle;
+}
+
+.q_a_box {
+  position: relative;
+  color: rgb(87, 87, 87);
+  max-width: 800px;
+  min-width: 360px;
+  width: auto;
+  margin: auto;
+  height: auto;
+  max-height: 90vh;
+  background: #f4f7f8;
+  border-radius: 15px;
+  padding: 20px;
+  border: 5px solid rgba(114, 170, 114, 0.726);
+  overflow: auto;
+  z-index: 999;
+  margin-top: 5vh;
+}
+
+.form_data {
+  width: 80%;
+  height: auto;
+  margin: auto;
+}
+
+/* .q_a_box {
+  position: relative;
+  color: white;
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: rgb(73, 122, 73);
+  border-radius: 15px;
+  padding: 20px;
+  border: 5px solid rgb(255, 255, 255);
+  overflow: auto;
+  z-index: 20;
+} */
+
+.q_a_close-icon {
+  content: '✖';
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 2rem;
+  color: rgb(160, 160, 160);
+}
+
+.q_a_close-icon:hover {
+  content: '✖';
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 2.4rem;
+  color: rgba(114, 170, 114, 0.726);
+}
+
+.pop_up_title {
+  width: 100%;
+  color: rgb(87, 87, 87);
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+.pop_up_subtitle {
+  width: 100%;
+  color: rgb(87, 87, 87);
+  text-align: center;
+  font-weight: bold;
+}
+
+hr.form_hr {
+  width: 80%;
+  border-top: 1px solid #d1d1d1;
+}
+
+.pop_up_input_form {
+  background-color: #ececec;
+  height: 40px;
+  width: 100%;
+  border: none;
+  border-top: 1px solid #d6d6d6;
+  border-radius: 4px;
+  padding: 0 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-top: 3px;
+  font-family: 'Poppins', sans-serif;
+  font-size: .9rem;
+}
+
+.pop_up_input_form::placeholder {
+  font-family: 'Poppins', sans-serif;
+  font-size: .9rem;
+  font-weight:300;
+  color:rgb(160, 160, 160);
+}
+
+.pop_up_input_form:focus {
+  outline: 2px solid rgba(114, 170, 114, 0.726);
+  border-radius: 4px;
+  font-family: 'Poppins', sans-serif;
+  font-size: .9rem;
+}
+
+.pop_up_input_form_textarea {
+  background-color: #ececec;
+  height: auto;
+  width: 100%;
+  border: none;
+  border-top: 1px solid #d6d6d6;
+  border-radius: 4px;
+  padding: 0 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-top: 3px;
+  resize: none;
+}
+
+.pop_up_input_form_textarea::placeholder {
+  font-family: 'Poppins', sans-serif;
+  font-size: .9rem;
+  font-weight:300;
+  color:rgb(160, 160, 160);
+}
+
+.pop_up_input_form_textarea:focus {
+  outline: 2px solid rgba(114, 170, 114, 0.726);
+  border-radius: 4px;
+  font-family: 'Poppins', sans-serif;
+  font-size: .9rem;
+  height: 151px;
+}
+
+.pop_up_email_text {
+  font-size: .7rem;
+  color: rgb(160, 160, 160);
+  text-align: center;
+}
+
+.form_item {
+  margin-bottom: 15px;
+  font-size: .8rem;
+}
+
+.form_characteristics_container {
+  display: grid;
+  grid-template-columns: 140px;
+}
+
+.form_characteristics_text {
+  display: grid;
+  align-items: space-between;
+  overflow: hidden;
+}
+
+.form_characteristics_radio {
+  grid-column-start: 2;
+  display: grid;
+  align-content: space-between;
+}
+
+.form_button {
+  margin: 10px 0px;
+  width: 100%;
+  text-align: center;
+}
+
+.modal_button {
+  height: 40px;
+  width: 200px;
+  border: none;
+  color: white;
+  background-color: rgb(241, 145, 81);
+  border-radius: 4px;
+  font-family: 'Poppins', sans-serif;
+  font-size: .9rem;
+  margin: 0 auto;
+}
