added file uploader, no functionality

--- a/public/styles.css
+++ b/public/styles.css
@@ -748,6 +748,30 @@ hr.form_hr {
   cursor: pointer;
 }
 
+.add_answer_img_thumbnails {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100px;
+  border-radius: 4px;
+  margin-top: 3px;
+}
+
+.img_placeholder {
+  display: flex;
+  height: 90px;
+  width: 110px;
+  background-color: #ececec;
+  border-top: 1px solid #d6d6d6;
+  justify-content: center;
+  align-items: center;
+  color: rgb(160, 160, 160);
+}
+
+.pop_up_img_loader {
+  margin: 3px 0;
+}
+
 .form_characteristics_container {
   display: grid;
   grid-template-columns: 140px;
