--- a/public/styles.css
+++ b/public/styles.css
@@ -667,6 +667,7 @@ body div.component div.reviewsRatingsContainer .ratingComponent{
 hr.form_hr {
   width: 80%;
   border-top: 1px solid #d1d1d1;
+  margin-bottom: 15px;
 }
 
 .pop_up_input_form {
@@ -754,7 +755,7 @@ hr.form_hr {
   width: 100%;
   height: 100px;
   border-radius: 4px;
-  margin-top: 3px;
+  margin-top: 6px;
 }
 
 .img_placeholder {
